--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.12.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.0",
+    "@mui/styled-engine-sc": "^5.11.0",
     "axios": "^1.2.1",
+    "html-entities": "^2.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-webcam": "^7.0.1"
+    "react-redux": "^8.0.5",
+    "react-webcam": "^7.0.1",
+    "redux": "^4.2.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
-    "react-router-dom": "^6.4.4",
+    "react-router-dom": "^6.8.2",
     "vite": "^3.2.0"
   }
 }
