Voice and Webcam Done

--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-speech-recognition": "^3.10.0",
     "react-webcam": "^7.0.1",
     "redux": "^4.2.0",
+    "regenerator-runtime": "^0.13.11",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
