--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.0",
-    "@mui/styled-engine-sc": "^5.11.0",
     "axios": "^1.3.4",
     "html-entities": "^2.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-speech-kit": "^3.0.1",
     "react-speech-recognition": "^3.10.0",
     "react-webcam": "^7.0.1",
     "redux": "^4.2.0",
